[package]
name = "tunh"
version = "0.1.0"
edition = "2021"
authors = ["Saing Sab <saing.sab@gmail.com>"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde", "clock"], default-features = false }
env_logger = "0.10.0"
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.3.4", features = ["v4"] }
